finally fix z-index animation bug + new teaser animation

--- a/src/styles/scss/base/_animation.scss
+++ b/src/styles/scss/base/_animation.scss
@@ -26,3 +26,30 @@
     transform: rotate(360deg);
   }
 };
+
+@keyframes flipInX {
+  from {
+    transform: perspective(400px) rotate3d(1, 0, 0, 90deg);
+    animation-timing-function: ease-in;
+    opacity: 0;
+  }
+
+  40% {
+    transform: perspective(400px) rotate3d(1, 0, 0, -20deg);
+    animation-timing-function: ease-in;
+  }
+
+  60% {
+    transform: perspective(400px) rotate3d(1, 0, 0, 10deg);
+    opacity: 1;
+  }
+
+  80% {
+    transform: perspective(400px) rotate3d(1, 0, 0, -5deg);
+  }
+
+  to {
+    transform: none;
+    opacity: 1;
+  }
+}
