--- a/src/styles/scss/components/_header.scss
+++ b/src/styles/scss/components/_header.scss
@@ -4,7 +4,6 @@
   top: 0;
   left: 0;
   width: calc(100% - #{$base-spacing}*2);
-  z-index: 1;
   display: flex;
   padding: 0 $base-spacing;
   justify-content: flex-end;
