--- a/src/styles/scss/components/_iphone.scss
+++ b/src/styles/scss/components/_iphone.scss
@@ -1,7 +1,7 @@
 .iphone {
   display: inline-block;
   position: relative;
-  transform: scale(0.75);
+  transform: scale(0.7);
   width: 375px;
   height: 667px;
   padding: 105px 24px;
