--- a/src/styles/scss/components/_project-detail.scss
+++ b/src/styles/scss/components/_project-detail.scss
@@ -5,10 +5,11 @@ $cubic-bezier: cubic-bezier(0.010, 0.800, 0.355, 1.000);
   justify-content: space-between;
   cursor: auto;
   padding: $base-spacing;
-  transform: scale3d(0, 0, 0);
-  transform-origin: center;
+  transform: scale3d(0, 0, 0) translate3d(0, 0, 0);
+  transform-origin: center bottom;
   background: $primary-color;
   height: 100%;
+  width: 46vw;
   position: absolute;
   top: 0;
   right: 0;
@@ -16,7 +17,7 @@ $cubic-bezier: cubic-bezier(0.010, 0.800, 0.355, 1.000);
   overflow-y: scroll;
   z-index: 1;
   &.js-show-detail {
-    transform: scale3d(1, 1, 1);
+    transform: scale3d(1, 1, 1) translate3d(0, 0, 1px);
     animation: 'fadeIn' 0.4s;
     .project-detail__header {
       animation: 'fadeInUp' 0.8s $cubic-bezier, 'fadeIn' 1.5s;
